--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,6 +13,7 @@
     </div>
 
     <div>
+        <p>　変更しますよ～</p>
         <p>公開日: 2014/06/14, 12:14</p>
         <h2><a href="">2番目の投稿</a></h2>
         <p> こんにちは！ よろしくお願いします！ </p>
